<resources>
    <string name="app_name">UserDirectory</string>
    <string name="michael_may">Michael May</string>
    <string name="delray_beach_fl">Delray Beach, Fl</string>
    <string name="_50">50</string>
    <string name="add_user_button">Add User Button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="save_user_info">Save User Info</string>
    <string name="auto_generate_entries">Auto Generate Entries</string>
</resources>