<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="12dp"
    android:background="@color/teal_200"
    android:elevation="10dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/michael_may"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delray_beach_fl"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/age_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/_50"
            android:textColor="@color/black"
            android:textSize="30sp" />


    </LinearLayout>


</LinearLayout>