<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddUserActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="45dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="45dp" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/location"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="45dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/age"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="45dp" />


    </com.google.android.material.textfield.TextInputLayout>






</androidx.constraintlayout.widget.ConstraintLayout>